[tool.poetry]
name = "atc-recordings"
version = "0.1.0"
description = "Small command line utility to download and prepare ATC recordings for review"
authors = ["Matt Beaumont <beaumontmj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
