[tool.poetry]
name = "atc-recordings"
version = "0.1.0"
description = "Small command line utility to download and prepare ATC recordings for review"
authors = ["Matt Beaumont <beaumontmj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ffmpeg-python = "^0.2.0"
requests = "^2.32.3"
tqdm = "^4.66.5"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
